[project]
name = "hron"
version = "0.5.1"
description = "Human-readable cron — a scheduling expression language that is a superset of cron"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["cron", "schedule", "human-readable", "hron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = ["tzdata>=2024.1"]

[project.urls]
Homepage = "https://github.com/prasrvenkat/hron"
Repository = "https://github.com/prasrvenkat/hron"

[build-system]
requires = ["uv_build>=0.10.2,<0.11"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0", "mypy>=1.0", "ruff>=0.11"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
