[package]
name = "hron-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for hron — human-readable cron"
license = "MIT"

[[bin]]
name = "hron"
path = "src/main.rs"

[dependencies]
hron = { path = "../hron" }
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
