[package]
name = "hron-cli"
version = "0.4.2"
edition = "2021"
description = "CLI for hron — human-readable cron"
license = "MIT"
keywords = ["cron", "schedule", "cli", "human-readable"]
categories = ["command-line-utilities", "date-and-time"]
repository = "https://github.com/prasrvenkat/hron"
homepage = "https://github.com/prasrvenkat/hron"
readme = "README.md"

[[bin]]
name = "hron"
path = "src/main.rs"

[dependencies]
hron = { path = "../hron", version = "0.4.2" }
clap = { version = "4", features = ["derive"] }
jiff = "0.2"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
