[package]
name = "hron"
version = "1.0.0"
edition = "2021"
description = "Human-readable cron — scheduling expressions that are a superset of what cron can express"
license = "MIT"
keywords = ["cron", "schedule", "datetime", "recurring", "calendar"]
categories = ["date-and-time", "parsing"]
repository = "https://github.com/prasrvenkat/hron"
homepage = "https://github.com/prasrvenkat/hron"
documentation = "https://docs.rs/hron"
readme = "README.md"
rust-version = "1.93"
# build.rs and conformance tests depend on spec/tests.json and spec/api.json
# which live outside the crate root. Exclude them from the published package
# so build.rs never runs on end users' machines.
exclude = ["build.rs", "tests/", "benches/"]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
jiff = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
serde_json = "1"

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
