[package]
name = "hron-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for hron — cron for humans"
license = "MIT"
repository = "https://github.com/prasrvenkat/hron"

[lib]
crate-type = ["cdylib"]

[dependencies]
hron = { path = "../hron", version = "0.1.0", default-features = false, features = ["serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"
jiff = { version = "0.2", features = ["js"] }
