[package]
name = "hron-wasm"
version = "0.5.0"
edition = "2021"
description = "WASM bindings for hron — human-readable cron"
license = "MIT"
keywords = ["cron", "schedule", "wasm", "human-readable"]
categories = ["wasm", "date-and-time"]
repository = "https://github.com/prasrvenkat/hron"
homepage = "https://github.com/prasrvenkat/hron"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
hron = { path = "../hron", version = "0.5.0", default-features = false, features = ["serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"
jiff = { version = "0.2", features = ["js"] }
